# topo-feature

./: .gitignore  README.md  USAGE.md  bblocks-config.yaml  build.sh
tools/topo-validator/: README.md  pyproject.toml
tools/topo-validator/tests/: conftest.py  test_in_memory_samples.py  test_transform_report_output.py
tools/topo-validator/tests/fixtures/: tr01-duplicate-point-fail.json  tr02-curve-self-intersection-fail.json  tr03-no-dangling-fail.json  tr04-surface-closed-ring-fail.json  tr11-point-missing-fail.json  tr12-minimum-length-fail.json  tr13-no-duplicate-curve-fail.json  tr14-curve-intersection-fail.json  tr22-curve-orientation-fail.json
tools/topo-validator/tests/reports/: 4-unit-up-down-validation-report.html  cube-validation-report.html  tetrahedron-validation-report.html  tr01-duplicate-point-fail-validation-report.html  tr02-curve-self-intersection-fail-validation-report.html  tr03-no-dangling-fail-validation-report.html  tr04-surface-closed-ring-fail-validation-report.html  tr11-point-missing-fail-validation-report.html  tr12-minimum-length-fail-validation-report.html  tr13-no-duplicate-curve-fail-validation-report.html  tr14-curve-intersection-fail-validation-report.html  tr22-curve-orientation-fail-validation-report.html
tools/topo-validator/topo_validator/: __init__.py  cli.py  geometry.py  loader.py  model.py  report.py  validator.py
tools/topo-validator/topo_validator/conformance/: __init__.py  cc01_points.py  cc02_curves.py  cc03_surfaces.py  cc04_shells.py  cc05_solids.py  cc06_relationships.py  cc07_containment.py
(+111 files in other folders)
